1. Added dropbox login, logout and sync note feature. 2. Added create/edit note feature. 3. Added list view for notes from dropbox app folder.

--- a/ShortNotes/ShortNotes/Info.plist
+++ b/ShortNotes/ShortNotes/Info.plist
@@ -45,5 +45,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>db-udg615mw45s5izb</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
